--- a/Pagina/detalle.html
+++ b/Pagina/detalle.html
@@ -49,7 +49,7 @@
             <div class="nav-wrapper" id="breadcrumbs">
                 <div class="col s12">
                     <a href="index.html" class="breadcrumb">Inicio</a>
-                    <a href="productos.html" class="breadcrumb">Producto</a>
+                    <a href="productos.html" class="breadcrumb">Productos</a>
                     <a href="detalle.html" class="breadcrumb">Vaso Térmico</a>
                 </div>
             </div>
@@ -117,11 +117,13 @@
                             <span id="precioDetalle" class="green-text left">$ 360</span>
                         </div>
                     </div>
-
-                    <span id="envioDetalle" class="green-text left">Envío gratis <i id="envioIcono"
+                    <div>
+                        <span id="envioDetalle" class="green-text left">Envío gratis <i id="envioIcono"
                                 class="material-icons">motorcycle</i></span>
-                    <input id="inputCantidad" class="black-text" placeholder="Código postal" type="number" />
-                    <a class="waves-effect waves-light btn green" style="margin-bottom: 2em;">Calcular</a>
+                        <input id="inputCantidad" class="black-text" placeholder="Código postal" type="number" />
+                        <a class="waves-effect waves-light btn green" style="margin-bottom: 2em;">Calcular</a>
+
+                    </div>
 
                     <div class="row">
                         <div class="col s12 m12 center">
