--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -45,7 +45,7 @@
                 <div class="container">
                     <br /><br />
                     <h1 class="header center white-text text-lighten-2 titulo_Slider">
-                        CONSERVA TU ALIMENTO <br> Y TU MEDIO AMBIENTE
+                        CONSERVÁ TU ALIMENTO <br> Y EL MEDIO AMBIENTE
                     </h1>
                     <div class="row center">
                         <h5 class="header col s12 light">
@@ -106,20 +106,19 @@
         <div class="container" style="margin-top: 3%">
             <div class="section">
                 <h3 class="center brand-logo tituloCombos">
-                    APROVECHA LOS COMBOS BIONDERISTAS
+                    APROVECHÁ LOS COMBOS BIONDERISTAS
                 </h3>
                 <div class="row">
                     <div class="col s12 m4">
                         <div class="center contenedorCombos">
                             <a href="detalle.html" class="botonCombo">
                                 <div class="combos">
-                                    <h3>BASICO</h3>
+                                    <h3>BÁSICO</h3>
                                     <i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
                                 </div>
                                 <div class="combos_Informacion">
                                     <p>
-                                        SENDERISTA PRINCIPIANTE <br>
-                                        1 Set de cubiertos + 1 Botella simple + 1 Bandeja simple
+                                        SENDERISTA PRINCIPIANTE <br> 1 set de cubiertos + 1 botella simple + 1 bandeja simple
                                     </p>
                                 </div>
                             </a>
@@ -135,8 +134,7 @@
                                 </div>
                                 <div class="combos_Informacion">
                                     <p>
-                                        SENDERISTA EXPERIMENTADO <br>
-                                        1 Set de cubiertos + 2 Botella deportiva + 2 Bowl simple
+                                        SENDERISTA EXPERIMENTADO <br> 1 set de cubiertos + 2 botellas deportivas + 2 bowls simples
                                     </p>
                                 </div>
                             </a>
@@ -152,9 +150,8 @@
                                 </div>
                                 <div class="combos_Informacion">
                                     <p>
-                                        SENDERISTA EXPERTO <br>
-                                        2 Set de cubiertos + 2 Botella deportiva + 2 Bandeja doble 
-                                    </p>                              
+                                        SENDERISTA EXPERTO <br> 2 set de cubiertos + 2 botellas deportivas + 2 bandejas dobles
+                                    </p>
                                 </div>
                             </a>
                         </div>
