--- a/Pagina/productos.html
+++ b/Pagina/productos.html
@@ -79,7 +79,7 @@
                 <div class="nav-wrapper" id="breadcrumbs">
                     <div class="col s12">
                         <a href="index.html" class="breadcrumb">Inicio</a>
-                        <a href="productos.html" class="breadcrumb">Producto</a>
+                        <a href="productos.html" class="breadcrumb">Productos</a>
                     </div>
                 </div>
             </nav>
@@ -138,7 +138,7 @@
 
                     <div class="row">
                         <div class="col s12">
-                            <a id="botonAplicarFiltro" class="waves-effect waves-light btn">Buscar</a>
+                            <a id="botonAplicarFiltro" class="waves-effect waves-light btn green">Buscar</a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                             </div>
                             <div class="card-content">
                                 <h5 class="">
-                                    Bowl simple <span class="green-text right">$50</span>
+                                    Bowl simple <span class="green-text right">$ 50</span>
                                 </h5>
                                 <p>Bowl simple para comida.</p>
                                 <br />
@@ -175,12 +175,12 @@
                             </div>
                             <div class="card-content">
                                 <h5 class="">
-                                    Bandeja doble <span class="green-text right">$70</span>
+                                    Bandeja doble <span class="green-text right">$ 70</span>
                                 </h5>
                                 <p>Bandeja doble con separación.</p>
                                 <br />
                                 <a href="detalle.html" class="boton-cartas waves-effect waves-light btn green">Detalles</a>
-                                <span class="green-text right">Envio gratis</span>
+                                <span class="green-text right">Envío gratis</span>
                             </div>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
                             </div>
                             <div class="card-content">
                                 <h5 class="">
-                                    Botella simple <span class="green-text right">$60</span>
+                                    Botella simple <span class="green-text right">$ 60</span>
                                 </h5>
                                 <p>Botella simple biodegradable.</p>
                                 <br />
@@ -213,9 +213,9 @@
                             </div>
                             <div class="card-content">
                                 <h5 class="">
-                                    Set de cubiertos <span class="green-text right">$20</span>
+                                    Set de cubiertos <span class="green-text right">$ 20</span>
                                 </h5>
-                                <p>Cubiertos de bambu biodegradables.</p>
+                                <p>Cubiertos de bambú biodegradables.</p>
                                 <br />
                                 <a href="detalle.html" class="boton-cartas waves-effect waves-light btn green">Detalles</a>
                             </div>
@@ -230,13 +230,13 @@
                                         class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
-                                <h5 class="">
-                                    Botella deportiva <span class="green-text right">$100</span>
+                                <h5 class="" style="font-size: 1.5em;">
+                                    Botella deportiva <span class="green-text right">$ 100</span>
                                 </h5>
                                 <p>Botella deportiva biodegradable.</p>
                                 <br />
                                 <a href="detalle.html" class="boton-cartas waves-effect waves-light btn green">Detalles</a>
-                                <span class="green-text right">Envio gratis</span>
+                                <span class="green-text right">Envío gratis</span>
                             </div>
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                             </div>
                             <div class="card-content">
                                 <h5 class="">
-                                    Bandeja simple <span class="green-text right">$30</span>
+                                    Bandeja simple <span class="green-text right">$ 30</span>
                                 </h5>
                                 <p>Bandeja simple para uso individual.</p>
                                 <br />
@@ -275,7 +275,7 @@
                         </div>
                         <div class="card-content">
                             <h5 class="">
-                                Pack de bolsas <span class="green-text right">$15</span>
+                                Pack de bolsas <span class="green-text right">$ 15</span>
                             </h5>
                             <p>3 bolsas biodegradables.</p>
                             <br />
@@ -293,7 +293,7 @@
                         </div>
                         <div class="card-content">
                             <h5 class="">
-                                Vaso biodegradable <span class="green-text right">$30</span>
+                                Vaso biodegradable <span class="green-text right">$ 30</span>
                             </h5>
                             <p>Vaso biodegradable.</p>
                             <br />
@@ -311,9 +311,9 @@
                         </div>
                         <div class="card-content">
                             <h5 class="">
-                                Vaso termico <span class="green-text right">$360</span>
+                                Vaso térmico <span class="green-text right">$ 360</span>
                             </h5>
-                            <p>Vaso termico de fibra de bambú.</p>
+                            <p>Vaso térmico de fibra de bambú.</p>
                             <br />
                             <a href="detalle.html" class="boton-cartas waves-effect waves-light btn green detalle">Detalles</a>
                         </div>
@@ -337,6 +337,8 @@
                 </li>
             </ul>
         </section>
+
+        <a href="carritoCompras.html" class="arriba center-align"><i class="fas fa-shopping-cart"></i> </a>
     </main>
 
     <footer class="page-footer green center">
