--- a/Pagina/sucursales.html
+++ b/Pagina/sucursales.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="card-content">
                                 <p>Podés encontrar nuestros locales en diferentes provincias para que disfrutes la experiencia de los productos de Bio Mountain en todo el país. Tenemos sucursales en Ciudad Autónoma de Buenos Aires, Jujuy, Chubut, Mendoza,
-                                    Neuquen, Salta.
+                                    Neuquen y Salta
                                 </p>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                             <br> Podés pedirnos una sucursal mediante <a class="green-text" href="contacto.html">contacto</a>.</p>
 
 
-                        <p><i class="tiny material-icons green-text">email</i> Si necesitás más packagings podés pedirla vía <a class="green-text" href="contacto.html">email</a>.</p>
+                        <p><i class="tiny material-icons green-text">email</i> Si necesitás más información podés consultarnos vía <a class="green-text" href="contacto.html">email</a>.</p>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <a id="jujuy" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaJujuy()">Jujuy</a>
                     <a id="chubut" class=" waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaChubut()">Chubut</a>
                     <a id="mendoza" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaMendoza()">Mendoza</a>
-                    <a id="neuquen" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaNeuquen()">Neuquen</a>
+                    <a id="neuquen" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaNeuquen()">Neuquén</a>
                     <a id="salta" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaSalta()">Salta</a>
                 </div>
 
@@ -96,27 +96,27 @@
             </div>
 
             <section class="">
-                <h5 class="ventajas">PUNTOS DE VENTA</h5>
-                <div class="container">
+                <h4 class="ventajas">PUNTOS DE VENTA</h4>
+                <div class="container puntosVenta">
                     <div class="section">
                         <div class="row">
                             <div class="col s12 m4">
-                                <h7 class="center">CABA: Humboldt 590 - Villa Crespo</h7>
+                                <h6 class="center">CABA: Humboldt 590 - Villa Crespo</h6>
                             </div>
                             <div class="col s12 m4">
-                                <h7 class="center">Jujuy: Gdor. José María Fascio 1020 - S. S. de Jujuy</h7>
+                                <h6 class="center">Jujuy: Gdor. J. M. Fascio 1020 - S. S. de Jujuy</h6>
                             </div>
                             <div class="col s12 m4">
-                                <h7 class="center">Chubut: Julio Argentino Roca 799 - Trelew</h7>
+                                <h6 class="center">Chubut: Julio Argentino Roca 799 - Trelew</h6>
                             </div>
                             <div class="col s12 m4">
-                                <h7 class="center">Mendoza: Suipacha 800 - Mendoza Capital</h7>
+                                <h6 class="center">Mendoza: Suipacha 800 - Mendoza Capital</h6>
                             </div>
                             <div class="col s12 m4">
-                                <h7 class="center">Neuquén: Gualeguay 348 - Neuquén</h7>
+                                <h6 class="center">Neuquén: Gualeguay 348 - Neuquén</h6>
                             </div>
                             <div class="col s12 m4">
-                                <h7 class="center">Salta: Santiago del Estero 2099 - Salta</h7>
+                                <h6 class="center">Salta: Santiago del Estero 2099 - Salta</h6>
                             </div>
                         </div>
                     </div>
