--- a/Pagina/contacto.html
+++ b/Pagina/contacto.html
@@ -79,7 +79,7 @@
                                     <div class="icon-block">
                                         <div class="nombre">
                                             <label for="nombre"> NOMBRE <br> </label>
-                                            <input type="text" name="nombre" id="nombre"> <br>
+                                            <input type="text" name="nombre" id="nombre" placeholder="Ej. Carla Perez"> <br>
                                         </div>
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                                     <div class="icon-block">
                                         <div class="provincia">
                                             <label for="provincia"> PROVINCIA <br> </label>
-                                            <input type="text" name="provincia" id="provincia"> <br>
+                                            <input type="text" name="provincia" id="provincia" placeholder="Ej. Salta"> <br>
                                         </div>
                                     </div>
                                 </div>
@@ -99,7 +99,7 @@
                                     <div class="icon-block">
                                         <div class="tel">
                                             <label for="telefono">TELÉFONO <br> </label>
-                                            <input type="text" name="telefono" id="telefono"> <br>
+                                            <input type="text" name="telefono" id="telefono" placeholder="Ej. 4444-4444"> <br>
                                         </div>
                                     </div>
                                 </div>
@@ -108,14 +108,14 @@
                                     <div class="icon-block">
                                         <div class="email">
                                             <label for="email"> EMAIL <br> </label>
-                                            <input type="text" name="email" id="email"> <br>
+                                            <input type="text" name="email" id="email" placeholder="Ej. carlaperez@gmail.com"> <br>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="consulta">
                                     <label for="consulta"> CONSULTA<br> </label>
-                                    <textarea name="consulta" id="consulta" cols="50" rows="100"></textarea>
+                                    <textarea name="consulta" id="consulta" cols="50" rows="100" placeholder="Ingrese su consulta"></textarea>
                                     <br>
                                     <br>
                                 </div>
