--- a/Pagina/carritoCompras.html
+++ b/Pagina/carritoCompras.html
@@ -95,7 +95,8 @@
                             <h5 class="">$ 100</h5>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <a href="index.html"><i class="fas fa-trash" style="color: green; font-size: 1.5em;"></i></a>
+                            <a href="index.html"><i class="fas fa-trash"
+                                    style="color: green; font-size: 1.5em;"></i></a>
                         </div>
                     </div>
 
@@ -126,7 +127,8 @@
                             <h5 class="">$ 70</h5>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <a href="index.html"><i class="fas fa-trash" style="color: green; font-size: 1.5em;"></i></a>
+                            <a href="index.html"><i class="fas fa-trash"
+                                    style="color: green; font-size: 1.5em;"></i></a>
                         </div>
                     </div>
 
@@ -156,7 +158,8 @@
                             <h5 class="">$ 60</h5>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <a href="index.html"><i class="fas fa-trash" style="color: green; font-size: 1.5em;"></i></a>
+                            <a href="index.html"><i class="fas fa-trash"
+                                    style="color: green; font-size: 1.5em;"></i></a>
                         </div>
                     </div>
                 </div>
@@ -185,13 +188,13 @@
                             <h6 style="color: green;">GRATIS</h6>
                         </div>
                         <select>
-                          <option value="" disabled selected class="select">Elija su local más cercano</option>
-                          <option value="1" class="select">CABA</option>
-                          <option value="2" class="select">Jujuy</option>
-                          <option value="3" class="select">Chubut</option>
-                          <option value="4" class="select">Mendoza</option>
-                          <option value="5" class="select">Neuquén</option>
-                          <option value="6" class="select">Salta</option>
+                            <option value="" disabled selected class="select">Elija su local más cercano</option>
+                            <option value="1" class="select">CABA</option>
+                            <option value="2" class="select">Jujuy</option>
+                            <option value="3" class="select">Chubut</option>
+                            <option value="4" class="select">Mendoza</option>
+                            <option value="5" class="select">Neuquén</option>
+                            <option value="6" class="select">Salta</option>
                         </select>
                     </div>
                 </div>
