--- a/Pagina/contacto.html
+++ b/Pagina/contacto.html
@@ -79,7 +79,8 @@
                                     <div class="icon-block">
                                         <div class="nombre">
                                             <label for="nombre"> NOMBRE <br> </label>
-                                            <input type="text" name="nombre" id="nombre" placeholder="Ej. Carla Perez"> <br>
+                                            <input type="text" name="nombre" id="nombre" placeholder="Ej. Carla Perez">
+                                            <br>
                                         </div>
                                     </div>
                                 </div>
@@ -88,7 +89,8 @@
                                     <div class="icon-block">
                                         <div class="provincia">
                                             <label for="provincia"> PROVINCIA <br> </label>
-                                            <input type="text" name="provincia" id="provincia" placeholder="Ej. Salta"> <br>
+                                            <input type="text" name="provincia" id="provincia" placeholder="Ej. Salta">
+                                            <br>
                                         </div>
                                     </div>
                                 </div>
