--- a/Pagina/detalle.html
+++ b/Pagina/detalle.html
@@ -60,7 +60,8 @@
             <div class="barraCategorias">
                 <div class="row">
                     <div class="col right">
-                        <a href="carritoCompras.html" class="waves-effect waves-light btn green"><i class="fas fa-shopping-cart ml2" style="margin-right: 1em;"></i>Ir al carrito</a>
+                        <a href="carritoCompras.html" class="waves-effect waves-light btn green"><i
+                                class="fas fa-shopping-cart ml2" style="margin-right: 1em;"></i>Ir al carrito</a>
                     </div>
                 </div>
             </div>
