--- a/Pagina/sucursales.html
+++ b/Pagina/sucursales.html
@@ -74,7 +74,8 @@
                     <div class="parteAbajoDerecha col s12">
 
                         <p><i class="tiny material-icons green-text">location_on</i> ¿No encontrás tu provincia?
-                            <br> Podés pedirnos una sucursal mediante <a class="green-text" href="contacto.html">contacto</a>.</p>
+                            <br> Podés pedirnos una sucursal mediante <a class="green-text" href="contacto.html">contacto</a>.
+                        </p>
 
 
                         <p><i class="tiny material-icons green-text">email</i> Si necesitás más información podés consultarnos vía <a class="green-text" href="contacto.html">email</a>.</p>
