basta de commits

--- a/Pagina/carritoCompras.html
+++ b/Pagina/carritoCompras.html
@@ -136,12 +136,12 @@
                 <hr>
                 <div class="row">
                     <div class="col s3 m2">
-                        <img src="img/botella.jpg" alt="Botella - BioMountain" class="circle responsive-img">
+                        <img src="img/vasotermico.jpg" alt="Vaso - Termico - Bambú" class="circle responsive-img">
                     </div>
                     <div class="col s9 m10">
                         <div class="col s12 m6">
-                            <h5>Botella simple</h5>
-                            <h7>Botella simple biodegradable.</h7>
+                            <h5>Vaso térmico</h5>
+                            <h7>Vaso térmico biodegradable hecho de fibra de bambú.</h7>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
                             <a class="boton-contador btn-floating btn-small waves-effect waves-light green mc-1">
@@ -155,7 +155,7 @@
                             </a>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <h5 class="">$ 60</h5>
+                            <h5 class="">$ 360</h5>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
                             <a href="index.html"><i class="fas fa-trash"
@@ -213,7 +213,7 @@
                             <h4 class="green-text">TOTAL: </h4>
                         </div>
                         <div class="col s6 precioTotal">
-                            <h4 class="green-text">$ 430</h4>
+                            <h4 class="green-text">$ 530</h4>
                         </div>
                     </div>
                     <div class="row">
