--- a/Pagina/sucursales.html
+++ b/Pagina/sucursales.html
@@ -9,6 +9,9 @@
     <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/estilos.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="favicon-32x32" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="favicon-16x16" sizes="16x16" href="img/favicon-16x16.png">
 </head>
 
 <body>
