--- a/Pagina/detalle.html
+++ b/Pagina/detalle.html
@@ -114,16 +114,38 @@
                     </div>
 
                     <div class="row">
+                        <div class="col s3 m3 center">
+                            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">remove</i></a>
+                        </div>
+                        <div class="col s6 m6 center">
+                            <input id="inputCantidad" class="black-text" placeholder="Cantidad" type="number" />
+                        </div>
+                        <div class="col s3 m3 center">
+                            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+                        </div>
+                    </div>
+
+                    <div class="row">
                         <div class="col s12 m6">
                             <span id="precioDetalle" class="green-text left">$ 360</span>
                         </div>
+                        <div class="col s12 m6">
+                            <span id="envioDetalle" class="green-text left">Envío gratis <i id="envioIcono"
+                                    class="material-icons">motorcycle</i></span>
+                        </div>
                     </div>
-                    <div>
-                        <span id="envioDetalle" class="green-text left">Envío gratis <i id="envioIcono"
-                                class="material-icons">motorcycle</i></span>
-                        <input id="inputCantidad" class="black-text" placeholder="Código postal" type="number" />
-                        <a class="waves-effect waves-light btn green" style="margin-bottom: 2em;">Calcular</a>
 
+                    <div class="col codigoPostal">
+                        <div class="row">
+                            <h7>Ingrese su código postal para calcular el envío</h7>
+                            <input id="inputCantidad2" class="black-text" placeholder="Código postal" type="number" /> <br>
+                            <a class="waves-effect waves-green lighten-1 btn green" style="margin-top: 1em;">Calcular</a>
+                        </div>
+                        <div class="row">
+                            <a href="https://www.correoargentino.com.ar/formularios/cpa" style="color: #4caf50;">
+                                <h7>No se mi código postal</h7>
+                            </a>
+                        </div>
                     </div>
 
                     <div class="row">
